--- a/index.html
+++ b/index.html
@@ -1,31 +1,112 @@
-<html>
-    <body>
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 
-        <!-- TODO: Add SDKs for Firebase products that you want to use
-             https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-firestore.js"></script>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <title>Pitt Connect</title>
+  </head>
+  <body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="pLogo.png" alt="" width="30px" class="d-inline-block align-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Pitt-Connect</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Class Search</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Help</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-        <script>
-          // Your web app's Firebase configuration
-          // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-          var firebaseConfig = {
-            apiKey: "AIzaSyDUNidnOH5qYfy_xDSPAkBBPxA2cwS1HJ8",
-            authDomain: "pitt-connect.firebaseapp.com",
-            projectId: "pitt-connect",
-            storageBucket: "pitt-connect.appspot.com",
-            messagingSenderId: "1037794928692",
-            appId: "1:1037794928692:web:2b6ecf6ea20d59798cc261",
-            measurementId: "G-23Z6FZBFB3"
-          };
-          // Initialize Firebase
-          firebase.initializeApp(firebaseConfig);
-          firebase.analytics();
+    <!-- Cards -->
+    <div class="mx-auto my-5" style="width: 75rem;">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CS 0449</h5>
+              <h5 class="card-title">Intro to Systems Software</h5>
+              <p class="card-text">Vinicius Petrucci</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./100w/yellowSquare.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">COURSE NUM</h5>
+              <h5 class="card-title">COURSE_NAME</h5>
+              <p class="card-text">INSTRUCTOR NAME</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">COURSE NUM</h5>
+              <h5 class="card-title">COURSE_NAME</h5>
+              <p class="card-text">INSTRUCTOR NAME</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./100w/yellowSquare.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">COURSE NUM</h5>
+              <h5 class="card-title">COURSE_NAME</h5>
+              <p class="card-text">INSTRUCTOR NAME</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">COURSE NUM</h5>
+              <h5 class="card-title">COURSE_NAME</h5>
+              <p class="card-text">INSTRUCTOR NAME</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./100w/yellowSquare.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">COURSE NUM</h5>
+              <h5 class="card-title">COURSE_NAME</h5>
+              <p class="card-text">INSTRUCTCOURSE NUM</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-          var db = firebase.firestore();
-        </script>
-    <body>
-<html>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-firestore.js"></script>
+  </body>
+</html>
