create class page

--- a/index.html
+++ b/index.html
@@ -35,16 +35,18 @@
     <!-- Cards -->
     <div class="mx-auto my-5" style="width: 75rem;">
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">CS 0449</h5>
-              <h5 class="card-title">Intro to Systems Software</h5>
-              <p class="card-text">Vinicius Petrucci</p>
+        <a href="class.html">
+          <div class="col">
+            <div class="card">
+              <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">CS 0449</h5>
+                <h5 class="card-title">Intro to Systems Software</h5>
+                <p class="card-text">Vinicius Petrucci</p>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
         <div class="col">
           <div class="card">
             <img src="./100w/yellowSquare.png" class="card-img-top" alt="...">
