create class page

--- a/class.html
+++ b/class.html
@@ -21,7 +21,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Zoom
+              <img src="ZoomIcon.png" width="7%" alt="" style="margin-right: 1rem;"> Zoom
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
