work on class screen and create class_search

--- a/class.html
+++ b/class.html
@@ -12,6 +12,9 @@
         <a class="navbar-brand" href="index.html">
           <img src="arrow.png" alt="" width="30px" class="d-inline-block align-top">
         </a>
+        <div class="navbar-header mx-auto">
+          CLASS_NAME
+        </div>
       </div>
     </nav>
 
@@ -26,7 +29,21 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <ul>
+                <li>
+                  <strong>Lecture (MW 1:15pm - 2:30pm): </strong> <a href="https://pitt.zoom.us/j/7391414109">https://pitt.zoom.us/j/7391414109</a>
+                  <ul>
+                    <li><strong>Passcode: </strong> XXXXXXXXXX</li>
+                  </ul>
+                  <br>
+                </li>
+                <li>
+                  <strong>Recitation (Th 7:50am): </strong> <a href="https://pitt.zoom.us/j/7391414109">https://pitt.zoom.us/j/7391414109</a>
+                  <ul>
+                    <li> <strong>Passcode: </strong>  XXXXXXXXXX </li>
+                  </ul>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -34,12 +51,14 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Discord
+              <img src="DiscordIcon.png" width="7%" alt="" style="margin-right: 1rem;"> Discord
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <ul>
+                <li><strong>Discord Channel: </strong> </strong> <a href="https://discord.gg/g7yna7FS">https://discord.gg/g7yna7FS</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -47,7 +66,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Group Me
+              <img src="GroupmeIcon.png" width="7%" alt="" style="margin-right: 1rem;"> Group Me
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -60,7 +79,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingFour">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-              Slack
+              <img src="SlackIcon.png" width="7%" alt="" style="margin-right: 1rem;"> Slack
             </button>
           </h2>
           <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -73,7 +92,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingFive">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-              Top Hat
+              <img src="TophatIcon.png" width="7%" alt="" style="margin-right: 1rem;"> Top Hat
             </button>
           </h2>
           <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
