--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Pitt-Connect</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Pitt-Connect</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Class Search</a>
+              <a class="nav-link" href="class_search.html">Class Search</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Help</a>
