get website up to date

--- a/class.html
+++ b/class.html
@@ -42,6 +42,13 @@
                   <ul>
                     <li> <strong>Passcode: </strong>  XXXXXXXXXX </li>
                   </ul>
+                  <br>
+                </li>
+                <li>
+                  <strong>Office Hours (Fri 10:30am - 1:30pm): </strong> <a href="https://pitt.zoom.us/j/7391414109">https://pitt.zoom.us/j/7391414109</a>
+                  <ul>
+                    <li> <strong>Passcode: </strong>  XXXXXXXXXX </li>
+                  </ul>
                 </li>
               </ul>
             </div>
@@ -71,7 +78,9 @@
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <ul>
+                <li><strong>Group Me: </strong> </strong> <a href="https://groupme.com/en-US/">https://groupme.com/en-US/</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -84,7 +93,9 @@
           </h2>
           <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <ul>
+                <li><strong>Slack Channel: </strong> </strong> <a href="https://slack.com/">https://slack.com/</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -97,7 +108,39 @@
           </h2>
           <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <ul>
+                <li><strong>Top Hat: </strong> </strong> <a href="https://tophat.com/">https://tophat.com/</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingSix">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+              <img src="canvasLogo.png" width="7%" alt="" style="margin-right: 1rem;"> Canvas
+            </button>
+          </h2>
+          <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <ul>
+                <li><strong>Canvas Page: </strong> </strong> <a href="https://canvas.pitt.edu/">https://canvas.pitt.edu/</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingSeven">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+              <img src="gradescopeLogo.png" width="7%" alt="" style="margin-right: 1rem;"> Gradescope
+            </button>
+          </h2>
+          <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <ul>
+                <li><strong>Gradescope: </strong> </strong> <a href="https://www.gradescope.com/">https://www.gradescope.com/</a></li>
+              </ul>
             </div>
           </div>
         </div>
