--- a/class_search.html
+++ b/class_search.html
@@ -6,7 +6,64 @@
     <title>Class Search</title>
   </head>
   <body>
-    <h1>HELLO WORLD</h1>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-lighAdd Course px-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="arrow.png" alt="" width="30px" class="d-inline-block align-top">
+        </a>
+        <div class="navbar-header mx-auto">
+          Results (#)
+        </div>
+      </div>
+      <form class="d-flex" method="get" action="class_search.html">
+        <input class="form-control me-2" type="search" placeholder="Course #" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </nav>
+
+    <div class="container">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Course Number</th>
+            <th scope="col">Instructor</th>
+            <th scope="col">Time</th>
+            <th scope="col">Section</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>CS 0449</td>
+            <td>Vicinus Pettruci</td>
+            <td>M W 1:15-2:30</td>
+            <td>123456</td>
+            <td><button type="button" name="button" class="btn btn-outline-primary ">Add Course</button></td>
+          </tr>
+          <tr>
+            <th scope="row">1</th>
+            <td>CS 0449</td>
+            <td>Vicinus Pettruci</td>
+            <td>M W 1:15-2:30</td>
+            <td>123456</td>
+            <td><button type="button" name="button" class="btn btn-outline-primary ">Add Course</button></td>
+          </tr>
+          <tr>
+            <th scope="row">1</th>
+            <td>CS 0449</td>
+            <td>Vicinus Pettruci</td>
+            <td>M W 1:15-2:30</td>
+            <td>123456</td>
+            <td><button type="button" name="button" class="btn btn-outline-primary ">Add Course</button></td>
+          </tr>
+        </tbody>
+      </table>`
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
   </body>
