--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+      <link rel="stylesheet" href="index.css">
     <title>Pitt Connect</title>
   </head>
   <body>
@@ -21,21 +22,19 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Pitt-Connect</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="class_search.html">Class Search</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Help</a>
-            </li>
           </ul>
         </div>
+        <form class="d-flex" method="get" action="class_search.html">
+          <input class="form-control me-2" type="search" placeholder="Course #" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
     </nav>
 
     <!-- Cards -->
     <div class="mx-auto my-5" style="width: 75rem;">
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <a href="class.html">
+        <a href="class.html" class="remove-style">
           <div class="col">
             <div class="card">
               <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
