--- a/index.html
+++ b/index.html
@@ -34,25 +34,29 @@
     <!-- Cards -->
     <div class="mx-auto my-5" style="width: 75rem;">
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <a href="class.html" class="remove-style">
           <div class="col">
             <div class="card">
               <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">CS 0449</h5>
-                <h5 class="card-title">Intro to Systems Software</h5>
-                <p class="card-text">Vinicius Petrucci</p>
+                <a href="class.html" class="remove-style">
+                  <h5 class="card-title">CS 0449</h5>
+                  <h5 class="card-title">Intro to Systems Software</h5>
+                  <p class="card-text">Vinicius Petrucci</p>
+                </a>
+                <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-danger remove-btn mt-3" name="button">Remove</button></div>
               </div>
             </div>
           </div>
-        </a>
         <div class="col">
           <div class="card">
             <img src="./100w/yellowSquare.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
+              <a href="class.html" class="remove-style">
+                <h5 class="card-title">COURSE NUM</h5>
+                <h5 class="card-title">COURSE_NAME</h5>
+                <p class="card-text">INSTRUCTOR NAME</p>
+              </a>
+              <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-danger remove-btn mt-3" name="button">Remove</button></div>
             </div>
           </div>
         </div>
@@ -60,9 +64,12 @@
           <div class="card">
             <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
+              <a href="class.html" class="remove-style">
+                <h5 class="card-title">COURSE NUM</h5>
+                <h5 class="card-title">COURSE_NAME</h5>
+                <p class="card-text">INSTRUCTOR NAME</p>
+              </a>
+              <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-danger remove-btn mt-3" name="button">Remove</button></div>
             </div>
           </div>
         </div>
@@ -70,9 +77,12 @@
           <div class="card">
             <img src="./100w/yellowSquare.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
+              <a href="class.html" class="remove-style">
+                <h5 class="card-title">COURSE NUM</h5>
+                <h5 class="card-title">COURSE_NAME</h5>
+                <p class="card-text">INSTRUCTOR NAME</p>
+              </a>
+              <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-danger remove-btn mt-3" name="button">Remove</button></div>
             </div>
           </div>
         </div>
@@ -80,9 +90,12 @@
           <div class="card">
             <img src="./100w/blueSquare.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
+              <a href="class.html" class="remove-style">
+                <h5 class="card-title">COURSE NUM</h5>
+                <h5 class="card-title">COURSE_NAME</h5>
+                <p class="card-text">INSTRUCTOR NAME</p>
+              </a>
+              <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-danger remove-btn mt-3" name="button">Remove</button></div>
             </div>
           </div>
         </div>
@@ -90,15 +103,20 @@
           <div class="card">
             <img src="./100w/yellowSquare.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTCOURSE NUM</p>
+              <a href="class.html" class="remove-style">
+                <h5 class="card-title">COURSE NUM</h5>
+                <h5 class="card-title">COURSE_NAME</h5>
+                <p class="card-text">INSTRUCTOR NAME</p>
+              </a>
+              <div class="d-flex justify-content-end"><button type="button" class="btn btn-outline-danger remove-btn mt-3" name="button">Remove</button></div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
+      <div class="d-flex justify-content-center my-3"><button type="button" onclick="editCourses()" class="btn btn-primary" name="button" id="edit-btn">Edit Courses</button></div>
+    </div>
+    <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
