--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
 
-      <div class="d-flex justify-content-center my-3"><button type="button" onclick="editCourses()" class="btn btn-primary" name="button" id="edit-btn">Edit Courses</button></div>
+      <div class="d-flex justify-content-center my-3"><button type="button" class="btn btn-primary" name="button" id="edit-btn">Edit Courses</button></div>
     </div>
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
